# modern-design.md

./: .gitignore  AGENTS.md  LICENSE  README.md  robots.txt
.github/workflows/: pages.yml
showcase/: 404.html  README.md  index.html  sitemap.xml
showcase/assets/: design-details.json  manifest.json
showcase/css/: shared.css
showcase/js/: shared.js
template/: design.md
tools/: README.md  build_manifest.py  inventory.py  parse_designs.py  pyproject.toml  scrape.py
websites/: .gitkeep
websites/active-theory/: design.md
websites/aristidebenoist/: design.md
websites/awwwards/: design.md
websites/basement/: design.md
websites/basicagency/: design.md
websites/bruno-simon/: design.md
websites/bureau-cool/: design.md
websites/cssdesignawards/: design.md
websites/dogstudio/: design.md
websites/epic/: design.md
websites/fffuel/: design.md
websites/field/: design.md
websites/firewatchgame/: design.md
websites/garden-eight/: design.md
websites/godly/: design.md
websites/hellomonday/: design.md
websites/immersive-g/: design.md
websites/k72/: design.md
websites/locomotive/: design.md
websites/lusion/: design.md
websites/makemepulse/: design.md
websites/media-monks/: design.md
websites/niccolomiranda/: design.md
websites/northkingdom/: design.md
websites/obys/: design.md
websites/ouiwill/: design.md
websites/resn/: design.md
websites/sequence/: design.md
websites/siteinspire/: design.md
websites/stinkstudios/: design.md
websites/tendril/: design.md
websites/thefwa/: design.md
websites/toyfight/: design.md
(+111 files in other folders)
