[project]
name = "modern-design-md-tools"
version = "0.1.0"
description = "Helper scripts that dump a website's HTML/CSS/JS/assets into tmp/<slug>/ for the modern-design.md contribution workflow."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Shuvam Banerji Seal" },
]
keywords = ["web-scraping", "design", "modern-design.md", "playwright", "html", "css", "js"]

dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
]

[project.optional-dependencies]
# Optional: only required for `scrape.py --use-playwright`
playwright = [
    "playwright>=1.40",
]
# Developer tools
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests>=2.31",
]

[project.scripts]
# Entry-points so contributors can run `scrape <url> <slug>` from the repo
# root after `uv pip install -e tools/`.
scrape = "scrape:main"
inventory = "inventory:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
